argo-services/ababiel-preview/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ababiel-preview
  labels:
    app.kubernetes.io/part-of: ababiel-preview
